--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "core-js": "^3.38.1",
     "eslint": "^9.11.1",
     "eslint-plugin-jsdoc": "^50.3.0",
-    "husky": "^9.1.6",
+    "husky": "^8.0.0",
     "lodash": "^4.17.21",
     "markdown-magic": "^3.3.0",
     "nodemon": "^3.1.7",
@@ -164,6 +164,7 @@
     "test": "wtr --coverage",
     "test:watch": "wtr --watch",
     "types": "tsc",
-    "postversion": "npm-run-all build:api build:docs"
+    "postversion": "npm-run-all build:api build:docs",
+    "prepare": "husky install"
   }
 }
