--- a/components/input/package.json
+++ b/components/input/package.json
@@ -7,7 +7,7 @@
     "================================================================================"
   ],
   "name": "@aurodesignsystem/auro-input",
-  "version": "4.0.0",
+  "version": "4.1.1",
   "description": "auro-input HTML custom element",
   "repository": {
     "type": "git",
@@ -21,12 +21,12 @@
   },
   "dependencies": {
     "@aurodesignsystem/auro-button": "^8.1.2",
-    "@aurodesignsystem/auro-formvalidation": "^1.0.3",
-    "@aurodesignsystem/auro-icon": "^5.0.2",
-    "@aurodesignsystem/auro-library": "^2.10.1",
-    "chalk": "^5.2.0",
+    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
+    "@aurodesignsystem/auro-icon": "^6.0.2",
+    "@aurodesignsystem/auro-library": "~2.8",
+    "chalk": "^5.3.0",
     "cleave.js": "^1.6.0",
-    "lit": "^3.2.0"
+    "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@alaskaairux/icons": "^4.43.0",
@@ -34,8 +34,8 @@
     "@aurodesignsystem/webcorestylesheets": "^5.1.2"
   },
   "devDependencies": {
-    "@alaskaairux/icons": "^4.43.0",
-    "@aurodesignsystem/design-tokens": "^4.9.2",
+    "@alaskaairux/icons": "^4.44.1",
+    "@aurodesignsystem/design-tokens": "^4.10.1",
     "@aurodesignsystem/eslint-config": "^1.3.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@commitlint/cli": "^19.5.0",
@@ -45,7 +45,6 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.1",
-    "@types/mocha": "^10.0.9",
     "@web/dev-server": "^0.4.6",
     "@web/test-runner": "^0.19.0",
     "autoprefixer": "^10.4.20",
@@ -55,29 +54,29 @@
     "concat": "^1.0.3",
     "concurrently": "^9.0.1",
     "copyfiles": "^2.4.1",
-    "core-js": "^3.38.1",
-    "eslint": "^9.11.1",
-    "eslint-plugin-jsdoc": "^50.3.0",
+    "core-js": "^3.39.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-jsdoc": "^50.4.3",
     "husky": "^9.1.6",
     "lodash": "^4.17.21",
-    "markdown-magic": ">=2.6.1",
+    "markdown-magic": "^2.6.1",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
-    "postcss-custom-properties": "^14.0.1",
+    "postcss-custom-properties": "^14.0.3",
     "postcss-discard-comments": "^7.0.3",
-    "rollup": "^4.22.5",
-    "rollup-plugin-serve": "^2.0.2",
-    "sass": "^1.79.4",
-    "semantic-release": "^24.1.2",
+    "rollup": "^4.24.3",
+    "rollup-plugin-serve": "^2.0.3",
+    "sass": "^1.80.5",
+    "semantic-release": "^24.2.0",
     "sinon": "^19.0.2",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.10.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.7.0",
-    "typescript": "^5.6.2",
+    "stylelint-scss": "^6.8.1",
+    "typescript": "^5.6.3",
     "wc-sass-render": "^1.4.0",
     "web-component-analyzer": "^2.0.0",
     "whatwg-fetch": "^3.6.20",
