fix: bundle auro-form root component & sub-components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "include": ["components/*/src/*.js"], // process the generated J
+  "include": [
+    "*.js",                    // process root level JS files
+    "components/*/src/*.js"    // process the generated JS
+  ],
   "exclude": [],
   "compilerOptions": {
     // Tells TypeScript to read JS files, as
@@ -14,26 +17,18 @@
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
-    
     // enable js modules with es6 for chai imports
     "esModuleInterop": true,
-    
     // skip type checking for *.d.ts in node_modules
     "skipLibCheck": true,
-    
     // 'node' matches Node.js module resolution mechanism
     "moduleResolution": "node",
-    
     "target": "ES2020",
-    
     "module": "ES2020",
-    
     // include type definitions for mocha and chai testing
     "types": ["mocha", "chai"],
-    
     // base directory for resolving non-relative module names
     "baseUrl": ".",
-    
     // map module imports to locations in node_modules
     "paths": {
       "*": ["node_modules/*"]
