--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "name": "@aurodesignsystem/auro-form",
   "version": "0.0.0",
-  "description": "auro-form HTML custom element",
+  "description": "auro-formkit",
   "repository": {
     "type": "git",
     "url": "https://github.com/AlaskaAirlines/auro-form"
