--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -68,6 +68,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.7.0",
+    "turbo": "^2.2.3",
     "typescript": "^5.5.4",
     "wc-sass-render": "^1.4.0",
     "web-component-analyzer": "^2.0.0",
@@ -133,12 +134,15 @@
     "design system",
     "web components"
   ],
+  "private": true,
+  "packageManager": "npm@10.0.0",
  "scripts": {
     "demo:copy:demo": "copyfiles -u 1 -V './demo/index.md' ./build/demo",
     "demo:copy:index": "copyfiles -u 1 -V './demo/index.html' ./build",
     "demo:new:build": "mkdir ./build && mkdir ./build/css && mkdir ./build/demo",
     "demo:rm:build": "rm -rf ./build",
-    "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
+    "demo:update:index": "node ./scripts/prepForBuild",
+    "dev": "concurrently --kill-others 'turbo run build:watch' 'turbo run serve'",
     "dist:js": "copyfiles -u 1 -V './src/**/*.js' ./dist",
     "postCss:component": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
@@ -146,6 +150,9 @@
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "types": "tsc",
 
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+
+    "build": "turbo run build",
+    "lint": "turbo run lint"
   }
 }
