--- a/components/input/package.json
+++ b/components/input/package.json
@@ -77,6 +77,9 @@
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.9.0",
     "typescript": "^5.6.3",
+    "stylelint-scss": "^6.7.0",
+    "turbo": "^2.2.3",
+    "typescript": "^5.6.2",
     "wc-sass-render": "^1.4.0",
     "web-component-analyzer": "^2.0.0",
     "whatwg-fetch": "^3.6.20",
@@ -146,12 +149,15 @@
     "design system",
     "web components"
   ],
+  "private": true,
+  "packageManager": "npm@10.0.0",
   "scripts": {
     "demo:copy:demo": "copyfiles -u 1 -V './demo/index.md' ./build/demo",
     "demo:copy:index": "copyfiles -u 1 -V './demo/index.html' ./build",
     "demo:new:build": "mkdir ./build && mkdir ./build/css && mkdir ./build/demo",
     "demo:rm:build": "rm -rf ./build",
-    "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
+    "demo:update:index": "node ./scripts/prepForBuild",
+    "dev": "concurrently --kill-others 'turbo run build:watch' 'turbo run serve'",
     "dist:js": "copyfiles -u 1 -V './src/**/*.js' ./dist",
     "postCss:component": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
@@ -159,6 +165,8 @@
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "types": "tsc",
 
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "build": "turbo run build",
+    "lint": "turbo run lint"
   }
 }
