--- a/package.json
+++ b/package.json
@@ -264,7 +264,7 @@
     "build:dropdown:release": "npm-run-all build:dropdown:full build:test build:demo:dropdown",
     "build:menu:release": "npm-run-all build:menu:full build:test build:demo:menu",
     "sweep": "rm -rf dist && find ./demo ./src ./components -not -path \"*/node_modules/*\" -type f \\( -name \"*.css\" -o -name \"*-css.js\" \\) -delete",
-    "test": "npm-run-all test:input test:dropdown test:form test:checkbox test:menu test:radio",
+    "test": "npm-run-all test:input test:dropdown test:form test:checkbox test:menu test:radio test:select",
     "test:watch": "wtr --watch",
     "test:form": "wtr \"./components/form/test/**/*.test.js\" --coverage",
     "test:form:watch": "wtr \"./components/form/test/**/*.test.js\" --watch",
