--- a/turbo.json
+++ b/turbo.json
@@ -1,26 +1,33 @@
 {
-  "name": "@aurodesignsystem/auro-form",
-  "private": true,
-  "workspaces": [
-    "components/*"
-  ],
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "test": "turbo run test",
-    "clean": "turbo run clean",
-    "format": "turbo run format",
-    "check-types": "turbo run check-types"
-  },
-  "devDependencies": {
-    "turbo": "^2.2.3",
-    "@aurodesignsystem/eslint-config": "^1.3.2",
-    "typescript": "^5.6.2",
-    "prettier": "^3.0.0"
-  },
-  "packageManager": "npm@8.5.0",
-  "engines": {
-    "node": "^18.x || ^20.x"
+  "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": ["**/.env.*local"],
+  "tasks": {
+    "build": {
+      "dependsOn": ["^build", "build:sass"],
+      "outputs": ["dist/**"]
+    },
+    "build:sass": {
+      "outputs": ["src/**/*.css"],
+      "inputs": ["src/**/*.scss"]
+    },
+    "build:watch": {
+      "dependsOn": ["^build"],
+      "persistent": true
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "clean": {
+      "cache": false
+    },
+    "test": {
+      "dependsOn": ["build"],
+      "outputs": ["coverage/**"],
+      "inputs": ["src/**/*.js", "test/**/*.js"]
+    },
+    "lint": {
+      "outputs": []
+    }
   }
 }
