build: update to config package.json

--- a/components/input/tsconfig.json
+++ b/components/input/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@auro-formkit/typescript/base.json",
+  "extends": "../../packages/typescript/base.json",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
