--- a/components/input/package.json
+++ b/components/input/package.json
@@ -10,8 +10,8 @@
   "version": "4.2.0",
   "description": "auro-input HTML custom element",
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "types": "tsc",
   "license": "Apache-2.0",
   "repository": {
