build: export config

--- a/components/input/package.json
+++ b/components/input/package.json
@@ -40,15 +40,16 @@
   "scripts": {
     "build": "npm-run-all build:version build:sass build:js types",
     "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
-    "test": "wtr --coverage",
+    "test": "wtr --config @auro-formkit/config/wtr",
     "lint": "npm-run-all lint:js lint:scss",
+    "commitlint": "commitlint --config @auro-formkit/config/commitlint",
     "clean": "rm -rf dist build .turbo",
-    "build:js": "rollup -c ../../packages/config/rollup/component.js",
+    "build:js": "rollup -c @auro-formkit/config/rollup",
     "build:sass": "sass --no-source-map --load-path=../../node_modules --load-path=. \"./src/styles:./dist/styles\"",
     "build:version": "auro-form-version",
     "build:watch": "nodemon -e scss,js --watch src --exec npm run build:sass",
-    "lint:js": "eslint . --config ../../packages/config/eslint/component.js",
-    "lint:scss": "stylelint \"**/*.scss\" --config ../../packages/config/stylelint/component.js",
+    "lint:js": "eslint . --config @auro-formkit/config/eslint",
+    "lint:scss": "stylelint \"**/*.scss\" --config @auro-formkit/config/stylelint",
     "test:watch": "wtr --watch",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "build:demo": "npm-run-all demo:clean demo:mkdir demo:copy",
