build: move config files into singular src folder

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,11 +6,11 @@
   "description": "Shared configurations for auro-formkit monorepo",
   "main": "index.js",
   "exports": {
-    "./commitlint": "./commitlint/commitlint.config.cjs",
-    "./eslint": "./eslint/.eslint.config.mjs",
-    "./rollup": "./rollup/rollup.config.mjs",
-    "./stylelint": "./stylelint/.stylelintrc.config.json",
-    "./wtr": "./wtr/web-test-runner.config.mjs"
+    "./commitlint": "./src/commitlint.config.cjs",
+    "./eslint": "./src/.eslint.config.mjs",
+    "./rollup": "./src/rollup.config.mjs",
+    "./stylelint": "./src/.stylelintrc.config.json",
+    "./wtr": "./src/web-test-runner.config.mjs"
   },
   "files": [
     "commitlint",
