--- a/package.json
+++ b/package.json
@@ -67,6 +67,12 @@
     "@web/dev-server": "^0.4.6",
     "@web/test-runner": "^0.19.0",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
+    "compression": "^1.7.5",
+    "copyfiles": "^2.4.1",
+    "eslint": "^9.14.0",
+    "eslint-plugin-jsdoc": "^50.5.0",
+    "autoprefixer": "^10.4.20",
     "chalk": "^5.3.0",
     "compression": "^1.7.4",
     "concat": "^1.0.3",
@@ -78,6 +84,11 @@
     "eslint-plugin-jsdoc": "^50.5.0",
     "husky": "^8.0.0",
     "lodash": "^4.17.21",
+    "nodemon": "^3.1.7",
+    "postcss": "^8.4.49",
+    "postcss-custom-properties": "^14.0.4",
+    "postcss-discard-comments": "^7.0.3",
+    "lodash": "^4.17.21",
     "markdown-magic": "^2.6.1",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
@@ -85,10 +96,17 @@
     "postcss-discard-comments": "^7.0.3",
     "postcss-selector-replace": "^1.0.2",
     "prettier": "^3.0.0",
+    "sass": "^1.80.7",
     "rollup": "^4.22.5",
     "rollup-plugin-serve": "^1.1.1",
     "sass": "^1.80.7",
     "semantic-release": "^24.1.2",
+    "stylelint": "^16.10.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.9.0",
     "stylelint": "^16.9.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^36.0.1",
@@ -106,7 +124,8 @@
     "wc-sass-render": {
       "sass": "$sass"
     }
-    "turbo": "^2.2.3"
+    "turbo": "^2.2.3",
+    "typescript": "^5.6.3"
   },
   "browserslist": [
     "last 2 Chrome versions",
