--- a/components/input/package.json
+++ b/components/input/package.json
@@ -24,8 +24,7 @@
     "@aurodesignsystem/auro-icon": "^6.0.2",
     "@aurodesignsystem/auro-library": "~2.8",
     "chalk": "^5.3.0",
-    "cleave.js": "^1.6.0",
-    "lit": "^3.2.1"
+    "cleave.js": "^1.6.0"
   },
   "peerDependencies": {
     "@alaskaairux/icons": "^4.43.0",
