build: update input exports path

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "private": true,
   "license": "Apache-2.0",
+  "exports": {
+    "./input": "./components/input/src/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/AlaskaAirlines/auro-formkit"
