--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": false,
   "license": "Apache-2.0",
   "exports": {
+    "./dropdown": "./components/dropdown/src/index.js",
     "./input": "./components/input/src/index.js"
   },
   "repository": {
