--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -28,6 +28,9 @@
     "@aurodesignsystem/webcorestylesheets": "^5.1.2"
   },
   "devDependencies": {
+    "@auro-formkit/build-tools": "workspace:*",
+    "@auro-formkit/config": "workspace:*",
+    "@auro-formkit/typescript": "workspace:*",
     "@aurodesignsystem/auro-library": "^2.8.0",
     "@aurodesignsystem/design-tokens": "^4.9.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
@@ -45,7 +48,7 @@
   "scripts": {
     "build": "npm-run-all build:version build:sass postCss:component sass:render bundler types",
     "build:version": "node ./src/scripts/version.mjs",
-    "build:sass": "sass --no-source-map --load-path=node_modules \"./src:./src\"",
+    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/styles.scss:./src/styles/styles.css\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c",
     "clean": "rm -rf dist build",
