--- a/packages/build-tools/tsconfig.json
+++ b/packages/build-tools/tsconfig.json
@@ -1,10 +1,12 @@
 {
-  "extends": "../typescript/base.json",
+  "extends": "@auro-formkit/typescript/base.json",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "types": ["node"]
+    "emitDeclarationOnly": false,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
