--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -48,7 +48,7 @@
   "scripts": {
     "build": "npm-run-all build:version build:sass postCss:component sass:render bundler types",
     "build:version": "node ./src/scripts/version.mjs",
-    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/styles.scss:./src/styles/styles.css\"",
+    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c",
     "clean": "rm -rf dist build",
