--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -5,31 +5,12 @@
   "private": true,
   "type": "module",
   "main": "src/index.ts",
-  "types": "src/index.ts",
+  "types": "tsc",
+  "exports": {
+    ".": "./src/index.js",
+    "./formVersionWriter": "./src/formVersionWriter.mjs"
+  },
   "scripts": {
     "clean": "rm -rf .turbo && rm -rf node_modules"
-  },
-  "dependencies": {
-    "chalk": "^5.3.0",
-    "compression": "^1.7.4",
-    "concat": "^1.0.3",
-    "concurrently": "^9.0.1",
-    "copyfiles": "^2.4.1",
-    "cross-env": "^7.0.3",
-    "nodemon": "^3.1.7",
-    "npm-run-all": "^4.1.5",
-    "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0"
-  },
-  "peerDependencies": {
-    "@aurodesignsystem/auro-library": "^2.10.1"
-  },
-  "devDependencies": {
-    "@aurodesignsystem/auro-library": "^2.10.1",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.6.2"
-  },
-  "engines": {
-    "node": "^18.x || ^20.x"
   }
 }
