build: update node paths

--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -53,8 +53,8 @@
     "bundler": "rollup -c",
     "clean": "rm -rf dist build",
     "dev": "concurrently --kill-others \"npm run build:watch\" \"npm run serve\"",
-    "postCss:component": "node @aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "sass:render": "sass-render --load-path=node_modules 'src/**/*.css' -t @aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
+    "sass:render": "sass-render --load-path=node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "test": "wtr --coverage",
     "test:watch": "wtr --watch",
