--- a/components/input/package.json
+++ b/components/input/package.json
@@ -72,8 +72,8 @@
     "build:watch": "nodemon -e scss,js --watch src --exec npm run build:dev:assets",
     "build:dev:assets": "npm-run-all build:sass:component postCss:component sass:render",
     "bundler": "rollup -c",
-    "postCss:component": "node @aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "sass:render": "sass-render 'src/**/*.css' 'components/**/*.css' -t node @aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
+    "sass:render": "sass-render 'src/**/*.css' 'components/**/*.css' -t node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "types": "tsc",
     "vrt:approve": "backstop approve",
