build: updates to build process

--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
   ],
   "scripts": {
     "build": "turbo run build",
+    "build:sass": "turbo run build:sass",
+    "build:version": "turbo run build:version",
+    "postCss:component": "turbo run postCss:component",
+    "sass:render": "turbo run sass:render",
+    "bundler": "turbo run bundler",
+    "types": "turbo run types",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "clean": "turbo run clean",
+    "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
     "build:docs": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
