--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -16,7 +16,7 @@
   "type": "module",
   "main": "index.js",
   "module": "index.js",
-  "types": "tsc",
+  "types": "tsc --project tsconfig.json",
   "license": "Apache-2.0",
   "dependencies": {
     "@aurodesignsystem/auro-icon": "^5.0.0",
@@ -31,7 +31,6 @@
     "@auro-formkit/build-tools": "workspace:*",
     "@auro-formkit/config": "workspace:*",
     "@auro-formkit/typescript": "workspace:*",
-    "@aurodesignsystem/auro-library": "^2.8.0",
     "@aurodesignsystem/design-tokens": "^4.9.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
@@ -46,15 +45,15 @@
     "yaml-lint": "^1.7.0"
   },
   "scripts": {
-    "build": "npm-run-all build:version build:sass postCss:component sass:render bundler types",
+    "build": "turbo run build --filter=@aurodesignsystem/auro-dropdown",
     "build:version": "node ./src/scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c",
     "clean": "rm -rf dist build",
-    "dev": "concurrently --kill-others \"npm run build:watch\" \"npm run serve\"",
+    "dev": "web-dev-server --open demo/ --node-resolve --watch",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "sass:render": "sass-render --load-path=node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "test": "wtr --coverage",
     "test:watch": "wtr --watch",
