--- a/components/input/package.json
+++ b/components/input/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "main": "src/index.js",
   "module": "src/index.js",
-  "types": "tsc",
+  "types": "tsc --project tsconfig.json",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -22,7 +22,6 @@
     "@aurodesignsystem/auro-button": "^8.1.3",
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "@aurodesignsystem/auro-icon": "^6.0.2",
-    "@aurodesignsystem/auro-library": "~2.8",
     "chalk": "^5.3.0",
     "cleave.js": "^1.6.0"
   },
@@ -65,20 +64,18 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm-run-all build:version build:sass sass:render bundler types",
-    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
-    "build:sass:component": "sass --no-source-map src:src",
+    "build": "turbo run build --filter=@aurodesignsystem/auro-dropdown",
     "build:version": "node ./src/scripts/version.mjs",
-    "build:watch": "nodemon -e scss,js --watch src --exec npm run build:dev:assets",
-    "build:dev:assets": "npm-run-all build:sass:component postCss:component sass:render",
+    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
+    "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c",
+    "clean": "rm -rf dist build",
+    "dev": "web-dev-server --open demo/ --node-resolve --watch",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "sass:render": "sass-render 'src/**/*.css' 'components/**/*.css' -t node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
-    "types": "tsc",
-    "vrt:approve": "backstop approve",
-    "vrt:ref": "backstop reference",
-    "vrt:report": "backstop openReport",
-    "vrt:test": "backstop test"
+    "test": "wtr --coverage",
+    "test:watch": "wtr --watch",
+    "types": "tsc"
   }
 }
