build: update bundler to use workspace

--- a/components/input/package.json
+++ b/components/input/package.json
@@ -69,7 +69,7 @@
     "build:version": "node ./src/scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
-    "bundler": "rollup -c ../../packages/config/src/rollup.config.mjs --input src/index.js",
+    "bundler": "rollup -c node:@auro-formkit/config/rollup --input src/index.js",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server --open demo/ --node-resolve --watch",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
